prevent shifting on mobile when drawing

--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
     background-color: skyblue;
+    overscroll-behavior: none;
 }
 
 #content {
@@ -9,4 +10,5 @@ body {
     left: 50%;
     transform: translate(-50%, -50%);
     text-align: center;
+
 }
